--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -30,6 +30,7 @@
     .home__left__btns {
       display: flex;
       gap: 30px;
+      padding: 10px 20px;
       .vidio__btn:hover {
         background-color: $hoverColor;
         padding: 0px 20px;     
