--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -60,6 +60,7 @@
       width: 100% !important;
       .btns {
         padding: 20px 40px !important;
+        font-size: 20px;
       }
     }
     
