--- a/css/style.css
+++ b/css/style.css
@@ -567,6 +567,7 @@ body {
   }
   .home__left .btns {
     padding: 20px 40px !important;
+    font-size: 20px;
   }
   .home__left__btns {
     flex-direction: column;
